k8s/app-manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: my-app
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 30%
      maxSurge: 30%
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 904627253972.dkr.ecr.eu-central-1.amazonaws.com/my-app:v1.1
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /_healthz
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /_healthz
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 15
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 200m
            memory: 200Mi
